--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,1 @@
-custom: ['https://www.paypal.me/radenvodka']
-custom: ['https://www.blockchain.com/btc/address/14MjRX4476hh8gwFNCj6GCAsSQuj42qUVf']
+custom: ['https://www.paypal.me/radenvodka'.'https://www.blockchain.com/btc/address/14MjRX4476hh8gwFNCj6GCAsSQuj42qUVf']
